@@ -20,9 +20,16 @@ git-annex (5.20150931) UNRELEASED; urgency=medium
     and stop recommending bittornado | bittorrent.
   * Debian: Remove dependency on transformers library, as it is now
     included in ghc.
+  * Fix a longstanding bug, where dropping a file from a remote
+    could race with other drops of the same file, and result in
+    all copies of its content being lost.
   * git-annex-shell: Added lockcontent command, to prevent dropping of
-    key's content.
-
+    a key's content. This is necessary due to the above bugfix.
+  * When a remote uses an old version of git-annex-shell without the
+    new lockcontent command, git-annex may not trust the remote enough
+    to be able to drop content.
+    Solution: Upgrade git-annex-shell to this version.
+    
  -- Joey Hess <id@joeyh.name>  Thu, 01 Oct 2015 12:42:56 -0400
 
 git-annex (5.20150930) unstable; urgency=medium
